# luck-aio-main

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: index.html  tailwind.config.ts
dashboard/src/: App.css  index.css
dashboard/src/components/: DashboardLayout.tsx  LogPanel.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/src/components/tabs/: ControlTab.tsx  DailyTasksTab.tsx  RegistrationsTab.tsx  RenewTimersTab.tsx  SettingsTab.tsx  WarmupTab.tsx  WarmupVolumeBonusesTab.tsx  WithdrawalsTab.tsx
dashboard/src/contexts/: ThemeContext.tsx
dashboard/src/data/: mockData.ts
dashboard/src/docs/: FLASK_API_ENDPOINTS.py
dashboard/src/pages/: Index.tsx
dashboard/src/services/: api.ts
data/templates/: README.md
docs/: architecture.md
src/luckflow/: __init__.py  __main__.py  cli.py
src/luckflow/blockchain/: __init__.py  solana.py
src/luckflow/browser/: __init__.py  captcha.py  extensions.py  ixbrowser.py  proxy.py  session.py
src/luckflow/config/: __init__.py  settings.py
src/luckflow/core/: __init__.py  exceptions.py  logging.py  models.py  runner.py  utils.py  workflow.py
src/luckflow/notifications/: __init__.py  telegram.py
src/luckflow/platform/: __init__.py  auth.py  balance.py  chest.py  connect.py  renew.py  wallet_setup.py  withdraw.py
src/luckflow/platform/games/: __init__.py  base.py  dice.py  dispatch.py  hellspin.py  limbo.py  mines.py
src/luckflow/server/: __init__.py  app.py  tasks.py
src/luckflow/server/tunnels/: __init__.py
src/luckflow/storage/: __init__.py  accounts.py  bonus_tracker.py  state.py  stats.py
src/luckflow/workflows/: __init__.py  browser_setup.py  daily.py  extension_fix.py  hardware_login.py  manual_withdraw.py  profile_list.py  registration.py  renew.py  warmup_registration.py  warmup_volume.py  withdraw.py  worker_sweep.py
tests/unit/: test_models.py  test_runner.py  test_state.py  test_utils.py
