[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luckflow"
version = "1.0.0"
description = "Async, multi-account browser-automation orchestration platform for Luck.io, with a worker pool, Solana on-chain settlement and a live React dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LuckFlow" }]
keywords = ["automation", "playwright", "asyncio", "solana", "orchestration"]

dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "playwright>=1.40",
    "patchright>=1.40",
    "ixbrowser-local-api>=1.0",
    "solana>=0.30",
    "solders>=0.20",
    "base58>=2.1",
    "Pillow>=10.0",
    "pyzbar>=0.1.9",
    "tqdm>=4.66",
    "jinja2>=3.1",
    "sympy>=1.12",
    "flask>=3.0",
    "plotly>=5.18",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
luckflow = "luckflow.cli:app"

[project.urls]
Homepage = "https://github.com/your-handle/luckflow"

[tool.hatch.build.targets.wheel]
packages = ["src/luckflow"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",    # line length handled by formatter
    "SIM105",  # try/except/pass is intentional for best-effort UI clicks
    "B027",    # Workflow.save_results is an optional (non-abstract) hook
]

[tool.mypy]
python_version = "3.10"
packages = ["luckflow"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
